--- a/1 - YoloV3 Detection Algoritma Açıklması.ipynb
+++ b/1 - YoloV3 Detection Algoritma Açıklması.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "import cv2 as cv\n",
@@ -35,14 +35,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 23,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yolo Classes ['person', 'bicycle', 'car', 'motorbike', 'aeroplane', 'bus', 'train', 'truck', 'boat', 'traffic light', 'fire hydrant', 'stop sign', 'parking meter', 'bench', 'bird', 'cat', 'dog', 'horse', 'sheep', 'cow', 'elephant', 'bear', 'zebra', 'giraffe', 'backpack', 'umbrella', 'handbag', 'tie', 'suitcase', 'frisbee', 'skis', 'snowboard', 'sports ball', 'kite', 'baseball bat', 'baseball glove', 'skateboard', 'surfboard', 'tennis racket', 'bottle', 'wine glass', 'cup', 'fork', 'knife', 'spoon', 'bowl', 'banana', 'apple', 'sandwich', 'orange', 'broccoli', 'carrot', 'hot dog', 'pizza', 'donut', 'cake', 'chair', 'sofa', 'pottedplant', 'bed', 'diningtable', 'toilet', 'tvmonitor', 'laptop', 'mouse', 'remote', 'keyboard', 'cell phone', 'microwave', 'oven', 'toaster', 'sink', 'refrigerator', 'book', 'clock', 'vase', 'scissors', 'teddy bear', 'hair drier', 'toothbrush']\n"
+     ]
+    }
+   ],
    "source": [
     "nameOfClasses = []\n",
-    "with open(\"files/coco.names\", \"r\") as f:\n",
+    "with open(\"files/yolov3/coco.names\", \"r\") as f:\n",
     "    nameOfClasses = [line.strip() for line in f.readlines()]\n",
     "\n",
-    "print(\"Yolo Classes\",nameOfClasses, end=\"\\n\")"
+    "print(\"Yolo Classes\",nameOfClasses)"
    ],
    "metadata": {
     "collapsed": false,
@@ -62,14 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "modelConfig = \"files/yolov3-320.cfg\"\n",
-    "modelWeights = \"files/yolov3-320.weights\"\n",
+    "modelConfig = \"files/yolov3/yolov3-320.cfg\"\n",
+    "modelWeights = \"files/yolov3/yolov3-320.weights\"\n",
     "\n",
     "model = cv.dnn.readNetFromDarknet(modelConfig, modelWeights)"
    ]
@@ -85,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "# For CPU\n",
@@ -101,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "# For GPU\n",
@@ -126,10 +134,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "outputs": [],
    "source": [
-    "img = cv.imread(\"01.jpg\")\n",
+    "img = cv.imread(\"test.jpeg\")\n",
     "#                                        Resimin Boyutu\n",
     "blob = cv.dnn.blobFromImage(img, 1 / 255, (320, 320), [0, 0, 0], 1, crop=False)"
    ],
@@ -151,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "model.setInput(blob)"
@@ -174,12 +182,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 29,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Katman Sayısı ::  254 Katman İsimleri :\n",
+      "\n",
+      " ('conv_0', 'bn_0', 'leaky_1', 'conv_1', 'bn_1', 'leaky_2', 'conv_2', 'bn_2', 'leaky_3', 'conv_3', 'bn_3', 'leaky_4', 'shortcut_4', 'conv_5', 'bn_5', 'leaky_6', 'conv_6', 'bn_6', 'leaky_7', 'conv_7', 'bn_7', 'leaky_8', 'shortcut_8', 'conv_9', 'bn_9', 'leaky_10', 'conv_10', 'bn_10', 'leaky_11', 'shortcut_11', 'conv_12', 'bn_12', 'leaky_13', 'conv_13', 'bn_13', 'leaky_14', 'conv_14', 'bn_14', 'leaky_15', 'shortcut_15', 'conv_16', 'bn_16', 'leaky_17', 'conv_17', 'bn_17', 'leaky_18', 'shortcut_18', 'conv_19', 'bn_19', 'leaky_20', 'conv_20', 'bn_20', 'leaky_21', 'shortcut_21', 'conv_22', 'bn_22', 'leaky_23', 'conv_23', 'bn_23', 'leaky_24', 'shortcut_24', 'conv_25', 'bn_25', 'leaky_26', 'conv_26', 'bn_26', 'leaky_27', 'shortcut_27', 'conv_28', 'bn_28', 'leaky_29', 'conv_29', 'bn_29', 'leaky_30', 'shortcut_30', 'conv_31', 'bn_31', 'leaky_32', 'conv_32', 'bn_32', 'leaky_33', 'shortcut_33', 'conv_34', 'bn_34', 'leaky_35', 'conv_35', 'bn_35', 'leaky_36', 'shortcut_36', 'conv_37', 'bn_37', 'leaky_38', 'conv_38', 'bn_38', 'leaky_39', 'conv_39', 'bn_39', 'leaky_40', 'shortcut_40', 'conv_41', 'bn_41', 'leaky_42', 'conv_42', 'bn_42', 'leaky_43', 'shortcut_43', 'conv_44', 'bn_44', 'leaky_45', 'conv_45', 'bn_45', 'leaky_46', 'shortcut_46', 'conv_47', 'bn_47', 'leaky_48', 'conv_48', 'bn_48', 'leaky_49', 'shortcut_49', 'conv_50', 'bn_50', 'leaky_51', 'conv_51', 'bn_51', 'leaky_52', 'shortcut_52', 'conv_53', 'bn_53', 'leaky_54', 'conv_54', 'bn_54', 'leaky_55', 'shortcut_55', 'conv_56', 'bn_56', 'leaky_57', 'conv_57', 'bn_57', 'leaky_58', 'shortcut_58', 'conv_59', 'bn_59', 'leaky_60', 'conv_60', 'bn_60', 'leaky_61', 'shortcut_61', 'conv_62', 'bn_62', 'leaky_63', 'conv_63', 'bn_63', 'leaky_64', 'conv_64', 'bn_64', 'leaky_65', 'shortcut_65', 'conv_66', 'bn_66', 'leaky_67', 'conv_67', 'bn_67', 'leaky_68', 'shortcut_68', 'conv_69', 'bn_69', 'leaky_70', 'conv_70', 'bn_70', 'leaky_71', 'shortcut_71', 'conv_72', 'bn_72', 'leaky_73', 'conv_73', 'bn_73', 'leaky_74', 'shortcut_74', 'conv_75', 'bn_75', 'leaky_76', 'conv_76', 'bn_76', 'leaky_77', 'conv_77', 'bn_77', 'leaky_78', 'conv_78', 'bn_78', 'leaky_79', 'conv_79', 'bn_79', 'leaky_80', 'conv_80', 'bn_80', 'leaky_81', 'conv_81', 'permute_82', 'yolo_82', 'identity_83', 'conv_84', 'bn_84', 'leaky_85', 'upsample_85', 'concat_86', 'conv_87', 'bn_87', 'leaky_88', 'conv_88', 'bn_88', 'leaky_89', 'conv_89', 'bn_89', 'leaky_90', 'conv_90', 'bn_90', 'leaky_91', 'conv_91', 'bn_91', 'leaky_92', 'conv_92', 'bn_92', 'leaky_93', 'conv_93', 'permute_94', 'yolo_94', 'identity_95', 'conv_96', 'bn_96', 'leaky_97', 'upsample_97', 'concat_98', 'conv_99', 'bn_99', 'leaky_100', 'conv_100', 'bn_100', 'leaky_101', 'conv_101', 'bn_101', 'leaky_102', 'conv_102', 'bn_102', 'leaky_103', 'conv_103', 'bn_103', 'leaky_104', 'conv_104', 'bn_104', 'leaky_105', 'conv_105', 'permute_106', 'yolo_106')\n"
+     ]
+    }
+   ],
    "source": [
     "layerNames = model.getLayerNames()\n",
     "\n",
-    "print(\"Katman Sayısı :: \",len(layerNames, \"Katman İsimleri :\"))\n",
+    "print(\"Katman Sayısı :: \",len(layerNames), \"Katman İsimleri :\")\n",
     "print(\"\\n\", layerNames)"
    ],
    "metadata": {
@@ -200,8 +218,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 30,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Çıktı Katmanları :: ['yolo_82', 'yolo_94', 'yolo_106']\n"
+     ]
+    }
+   ],
    "source": [
     "outputLayerNames = [(layerNames[i - 1]) for i in model.getUnconnectedOutLayers()]\n",
     "\n",
@@ -225,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "outputs =  model.forward(outputLayerNames)"
@@ -242,9 +268,9 @@
    "source": [
     "Daha fazla ilerlemeden bilmeyenleriniz için YoloV3'ün ağ yapısından kısaca bahsetmeliyim. YoloV3 nöral ağ yapısı aşağıdaki şekildedir.\n",
     "\n",
+    "![](images/structure.jpeg)\n",
     "\n",
-    "Diagramdaki mavi katmanlar bizim kısa süre önce bulduğumuz çıktı katmanlarıdır. Çıktı katmanlarının yapısını incelyeccek olursak, her bir katmanın resim üzerinde belirli sayıda kutusu vardır ve bu kutular içerisinde tanıma işlemi gerçekleştirir. Bu sayede klasik kayan pencereden çok ve çok daha hızlı şekilde tüm resimde tespit denemelerini yapmış olur. Katmanların resim üzerindeki kutularını anlamanız için görselleştirecek olursak eğer\n",
-    "\n",
+    " Çıktı katmanlarının yapısını incelyeccek olursak, her bir katmanın resim üzerinde belirli sayıda kutusu vardır ve bu kutular içerisinde tanıma işlemi gerçekleştirir. Bu sayede klasik kayan pencereden çok ve çok daha hızlı şekilde tüm resimde tespit denemelerini yapmış olur. Diagramdaki pembe kareler aslında resim üzerindeki ilgili çıktı katmanının bounding box'larının çizilmiş hali. O kadar fazla ve iç içelerki resim pembe bir kutu olarak görünüyor.\n",
     "\n",
     "Birazda matematiksel olarak çıktı katmanlarını inceleyelim. 3 çıktı katmanınında boyutlarını inceleyecek olursak eğer . . ."
    ],
@@ -254,8 +280,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 32,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(300, 85)\n",
+      "(1200, 85)\n",
+      "(4800, 85)\n"
+     ]
+    }
+   ],
    "source": [
     "print(outputs[0].shape)\n",
     "print(outputs[1].shape)\n",
@@ -279,8 +315,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 33,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(outputs))"
    ],
@@ -293,16 +337,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 34,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([[0.05675942, 0.06507903, 0.4949374 , ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       [0.06522804, 0.0505011 , 0.3891846 , ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       [0.06652524, 0.05380305, 1.0433797 , ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       ...,\n",
+      "       [0.947155  , 0.9361667 , 0.5393416 , ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       [0.9567341 , 0.95334876, 0.41188383, ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       [0.96219033, 0.9553744 , 1.104331  , ..., 0.        , 0.        ,\n",
+      "        0.        ]], dtype=float32), array([[0.01956277, 0.03172309, 0.05403508, ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       [0.02241009, 0.02457943, 0.46454987, ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       [0.02971033, 0.02151005, 0.08663657, ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       ...,\n",
+      "       [0.96918625, 0.9692611 , 0.05536738, ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       [0.9735462 , 0.9706112 , 0.4552845 , ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       [0.9718984 , 0.9775319 , 0.097245  , ..., 0.        , 0.        ,\n",
+      "        0.        ]], dtype=float32), array([[0.00816622, 0.0080172 , 0.01113305, ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       [0.01099352, 0.01465415, 0.02114934, ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       [0.01197768, 0.01035371, 0.23635323, ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       ...,\n",
+      "       [0.98639506, 0.98674077, 0.02310597, ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       [0.98645926, 0.9838077 , 0.02385258, ..., 0.        , 0.        ,\n",
+      "        0.        ],\n",
+      "       [0.9839196 , 0.9885874 , 0.20711279, ..., 0.        , 0.        ,\n",
+      "        0.        ]], dtype=float32))\n"
+     ]
+    }
+   ],
    "source": [
     "print(outputs)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
@@ -331,8 +418,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
+   "execution_count": 35,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.05675942 0.06507903 0.4949374  ... 0.         0.         0.        ]\n",
+      " [0.06522804 0.0505011  0.3891846  ... 0.         0.         0.        ]\n",
+      " [0.06652524 0.05380305 1.0433797  ... 0.         0.         0.        ]\n",
+      " ...\n",
+      " [0.947155   0.9361667  0.5393416  ... 0.         0.         0.        ]\n",
+      " [0.9567341  0.95334876 0.41188383 ... 0.         0.         0.        ]\n",
+      " [0.96219033 0.9553744  1.104331   ... 0.         0.         0.        ]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(outputs[0])"
    ],
@@ -346,7 +447,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Şimdi ise çıktı katmnanını il kutusunun içerisindeki değerlere bakalım :"
+    "Şimdi ise çıktı katmnanını ill kutusunun içerisindeki değerlere bakalım :"
    ],
    "metadata": {
     "collapsed": false
@@ -354,8 +455,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 36,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.6759425e-02 6.5079026e-02 4.9493739e-01 1.8464674e-01 8.8470316e-08\n",
+      " 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
+      " 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
+      " 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
+      " 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
+      " 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
+      " 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
+      " 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
+      " 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
+      " 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
+      " 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
+      " 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
+      " 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
+      " 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
+      " 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
+      " 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00\n",
+      " 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00]\n"
+     ]
+    }
+   ],
    "source": [
     "print(outputs[0][0])"
    ],
@@ -375,6 +500,7 @@
     "\n",
     "Eğer stünlura bir tablo ile temsil edecek olursak eğer :\n",
     "\n",
+    "![](images/table.png)\n",
     "\n",
     "Burada bilmeniz gereken en öenmli şey ise sütunlardaki en-boy oranlarının 320x320 piksel bir resime göre ayarlanmış olamsıdır yani ilerleyen kısımlarda bu değeri kendi resimimizin boyutuna göre yeniden ayarlayacağız. O zaman başlayalım. İlk olarak resimimizin orjinal en-boy ölçğlerini alalım."
    ],
@@ -384,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "outputs": [],
    "source": [
     "height, width, channel = img.shape"
@@ -407,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "outputs": [],
    "source": [
     "boundingBoxes = []\n",
@@ -441,7 +567,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
